--- a/style.css
+++ b/style.css
@@ -1,39 +1,56 @@
 body {
-  font-family: 'times new roman', arial, sans-serif;
+  font-family: 'arila narrow', arial, sans-serif;
   font-weight: 300;
-  color: yellow;
+  letter-spacing: 1px;
   background-image: url(background.jpg);
   background-repeat: repeat;
-  text-align: center;
-  /*border-color: white;
-  border-width: 10px;*/
+  color: white;
 }
-#wrapper {
-  width: 960px;
-  margin: 20px auto 20px auto;
-}
+
+#picture { 
+  border-style: solid;
+  border-width: 10px;
+  border-radius: 5px;
+  border-color: rgb(144,144,144);
+  height: 500px;
+  position: relative;
+  left: 250px;  		
+ }
+
 h1 {
-	color: red;
-	/*comment*/
+	text-transform: uppercase;
+	letter-spacing: 10px;
+	font-size: 80px; 
 }
 
-#summary {
-	color: purple;
+h2 {
+	font-size: 40px;
+	font-weight: 200;
 }
 
-img {
-	border-color: white;
-  	border-width: 10px;
-  	border-style: double dashed;
+h3 {
+	font-size: 30px;
+	font-weight: 800;
+	font-style: italic;
 }
 
-/*img {
-	height:  100px;
-	width: 10px;
-}*/
-
+h4 {
+	text-decoration: underline;
+	text-transform: uppercase;
+	font-size: 25px;
+	font-weight: 400;
 }
 
+ul {
+	font-size: 20px;
+}
 
+.info {
+	font-size: 20px;
+	letter-spacing: 3px;
+}
 
+#wrapper {
+  width: 1300px;
+  margin: 20px auto 20px auto;
 }
