Corrected case on picture name

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ h3 {
 }
 
 .jumbotron {
-background-image: url(oceancake.jpg);
+background-image: url(oceancake.JPG);
 height: 500px;
 width: 1800px;
 }
