--- a/about.css
+++ b/about.css
@@ -15,19 +15,23 @@ h1 {
 
 h2 {
     text-align: center;
-    font-family: 'Catamaran', sans-serif;f;
+    font-family: 'Catamaran', sans-serif;
     font-size: 100px;
 }
 
 h3 {
+  text-align: center;
+}
+
+h4 {
     text-align: center;
     text-justify: inter-word;
     font-family: 'Roboto Condensed', sans-serif;
-  font-size: 30px;   
+ 	font-size: 36px;   
 }
 
 .navbar-brand {
-  font-weight: bold;
+	font-weight: bold;
 }
 
 .jumbotron {
