--- a/about.css
+++ b/about.css
@@ -34,6 +34,7 @@ p {
     text-justify: inter-word;
     font-family: 'Roboto Condensed', sans-serif;
   font-size: 22px;   
+  /*space*/
 }
 
 .navbar-brand {
